--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.3",
+    "@tanstack/react-query": "^4.24.4",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -17,6 +19,7 @@
     "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
